# RubikCubeSolver

./: CMakeLists.txt  README.md  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  main.cpp  tempCodeRunnerFile.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1Darray.cpp  RubiksCube3Darray.cpp  RubiksCubeBitboard.cpp
Model/PatternDatabase/: PatternDatabase.h
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.h  NibbleArray.h  PatternDatabase.h  PermutationIndexer.h  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDFSSolver.h
